apps/registry/disabled/registry-mirror-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-mirror
  labels:
    app: docker-registry-mirror
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: registry
      protocol: TCP
      name: registry
  selector:
      app: docker-registry-mirror
---
apiVersion: v1
kind: Service
metadata:
  name: gcr-registry-mirror
  labels:
    app: gcr-registry-mirror
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: registry
      protocol: TCP
      name: registry
  selector:
      app: gcr-registry-mirror
---
apiVersion: v1
kind: Service
metadata:
  name: ghcr-registry-mirror
  labels:
    app: ghcr-registry-mirror
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: registry
      protocol: TCP
      name: registry
  selector:
      app: ghcr-registry-mirror
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-registry-mirror
  labels:
    app: k8s-registry-mirror
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: registry
      protocol: TCP
      name: registry
  selector:
      app: k8s-registry-mirror
